internals: update dependencies; prepare codebase for svelte 4 upgrade
We aren't going to Svelte 4 just yet as I didn't see any performance
benefits in the brief testing I did. (Not even smaller bundle size.)

Might as well wait until a couple months from now when any bugs are
under control.

--- a/src/ui/component/feed/Feed.pug
+++ b/src/ui/component/feed/Feed.pug
@@ -93,6 +93,7 @@ nav.feed
 			ol.feed-items
 				{#each items as item, i (item)}
 					{#if !(filter === 'unread' && read[i])}
+						<!-- svelte-ignore a11y-no-noninteractive-element-interactions -->
 						li(on:mousedown={e => { if(e.button === 0) { read[i] = true } }})
 							{#if type.endsWith('_comments')}
 								Comment(id={item?.id || item} out_of_context={true})
