--- a/src/ui/component/shared/Popup.pug
+++ b/src/ui/component/shared/Popup.pug
@@ -8,6 +8,7 @@ script.
 		'Escape': -> dispatch('close')
 
 .popup(role='dialog' use:virtual_hotkeys={hotkeys})
+	<!-- svelte-ignore a11y-no-static-element-interactions -->
 	.popup-overlay(on:mousedown={() => dispatch('close')})
 	<!-- svelte-ignore a11y-autofocus -->
 	.popup-body(autofocus)
