ui: refine typography

--- a/src/ui/component/comment/Comment.pug
+++ b/src/ui/component/comment/Comment.pug
@@ -154,7 +154,7 @@ script.
 
 style.
 	.comment
-		margin 0.666em 0
+		margin-top 0.666em
 		position relative
 	.comment-body
 		border-left 1px solid
@@ -169,8 +169,7 @@ style.
 		.comment-with-low-score:not(.comment-deleted) > &
 			opacity 0.5
 		:global(& img)
-			border-radius 0.5em
-			margin 0.2em
+			border-radius 5px
 			max-height 5em
 			width auto
 	.comment-clip
@@ -189,4 +188,4 @@ style.
 		border-left 1px solid var(--c-blend-normal)
 		padding-left 24px
 	.comment-source-link
-		margin 0.666em 1em
+		margin-top 0.666em
