--- a/src/ui/component/global/GlobalRadialMenu.pug
+++ b/src/ui/component/global/GlobalRadialMenu.pug
@@ -115,7 +115,7 @@ style.
 		&.radial-menu-icon-selected
 			font-size 2em
 	.radial-menu-icon-center
-		opacity 0.5
+		color var(--c-text-weak)
 	.radial-menu-icon-east
 		left 100%
 	.radial-menu-icon-north
