--- a/src/ui/component/message/Message.pug
+++ b/src/ui/component/message/Message.pug
@@ -54,7 +54,7 @@ style.
 		display inline-flex
 		flex-flow column nowrap
 		gap 6px
-		margin 0.666em 1em
+		margin-top 0.666em
 		max-width 360px
 	:global(.message > .md)
 		background var(--c-subreddit-theme)
