--- a/src/ui/component/subreddit/SubredditRules.pug
+++ b/src/ui/component/subreddit/SubredditRules.pug
@@ -33,7 +33,7 @@ script.
 
 style.
 	.subreddit-rule
-		margin 0 0 1.333em
+		margin 1.333em 0 0
 	.subreddit-rule-short-description
 		font-size inherit
 		font-feature-settings 'calt', 'cpsp', 'ss01'
