--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -30,7 +30,7 @@ style.
 		display inline-flex
 		flex-flow column nowrap
 		gap 6px
-		margin 0.666em 0
+		margin-top 0.666em
 		position relative
 	.comment-editor-text-field
 		border 1px solid var(--c-score-0)
