--- a/src/ui/component/post/PostComments.pug
+++ b/src/ui/component/post/PostComments.pug
@@ -41,7 +41,7 @@ script.
 
 style.
 	ol
-		margin 0.666em 0
+		margin-top 0.666em
 	.post-comments-empty-notification
 		color var(--c-text-weak)
 		padding 0.666em 0
