--- a/src/ui/component/shared/FormattedHTML.pug
+++ b/src/ui/component/shared/FormattedHTML.pug
@@ -1,11 +1,13 @@
 script.
 	export html = null
 	
-	# Replace hardcoded "reddit.com" links with relative links --- if someone is using our client, they surely want Reddit links to open in our client as well.
-	# Display pictures instead of links where New Reddit does so.
+	# Lines 1/2: Replace hardcoded "reddit.com" links with relative links --- if someone is using our client, they surely want Reddit links to open in our client as well.
+	# Line 3: Display pictures instead of links where New Reddit does so.
+	# Line 4: Normalize problematic <li>[TEXT NODE]<[ANY TAG]></li> markup from server (breaks CSS `:first-child` expectation).
 	formatted = html
 		.replace(/<a href="https?:\/\/redd\.it\/(?<path>[^"]*)"[^>]*>/g, '<a href="/post/$<path>">')
 		.replace(/<a href="https?:\/\/(?:(?:new|np|old|www)\.)?reddit\.com\/(?<path>[^"]*)"[^>]*>/g, '<a href="/$<path>">')
 		.replace(/<a href="https:\/\/(?<subdomain>preview)\.redd\.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<a href="https://$<subdomain>.redd.it/$<filepath>" target="_blank"><img decoding="async" loading="eager" src="https://$<subdomain>.redd.it/$<filepath>"></a>')
+		.replace(/<li>(?<text>[^<]+)/g, '<li><span>$<text></span>')
 
 {@html formatted}
