--- a/src/ui/component/user/User.pug
+++ b/src/ui/component/user/User.pug
@@ -84,31 +84,33 @@ svelte:head
 		{:else if user.is_blocked}
 			Error(message="You blocked this user.")
 		{:else}
-			ButtonGroup(options={tabs_array(tabs, api.getUser() === name).map(x => ({ ...x, link: format_url({ subpage: x.value, user_name: name })}))} selected={tab})
+			menu.user-tab-options
+				ButtonGroup(options={tabs_array(tabs, api.getUser() === name).map(x => ({ ...x, link: format_url({ subpage: x.value, user_name: name })}))} selected={tab})
 			hr
-			{#if tab === 'comments'}
-				{#key sort}
-					{#key time_range}
+			section.user-content
+				{#if tab === 'comments'}
+					{#key sort}
+						{#key time_range}
+							{#key after_id}
+								Feed(after_id={after_id} sort={sort} time_range={time_range} type='user_comments' user_name={name})
+				{:else if tab === 'messages'}
+					ButtonGroup(options={tabs_array(tabs.messages.filters).map(x => ({ ...x, link: format_url({ feed_filter: x.value, subpage: 'messages', user_name: name }) }))} selected={filter})
+					{#key filter}
 						{#key after_id}
-							Feed(after_id={after_id} sort={sort} time_range={time_range} type='user_comments' user_name={name})
-			{:else if tab === 'messages'}
-				ButtonGroup(options={tabs_array(tabs.messages.filters).map(x => ({ ...x, link: format_url({ feed_filter: x.value, subpage: 'messages', user_name: name }) }))} selected={filter})
-				{#key filter}
-					{#key after_id}
-						Feed(after_id={after_id} after_id_type={after_id_type} filter={filter} subpage='messages' type='account_messages' user_name={name})
-			{:else if tab === 'posts'}
-				{#key sort}
-					{#key time_range}
+							Feed(after_id={after_id} after_id_type={after_id_type} filter={filter} subpage='messages' type='account_messages' user_name={name})
+				{:else if tab === 'posts'}
+					{#key sort}
+						{#key time_range}
+							{#key after_id}
+								Feed(after_id={after_id} sort={sort} subpage='posts' time_range={time_range} type='user_posts' user_name={name})
+				{:else if tab === 'saved'}
+					ButtonGroup(options={tabs_array(tabs.saved.filters).map(x => ({ ...x, link: format_url({ feed_filter: x.value, subpage: 'saved', user_name: name }) }))} selected={filter})
+					{#if filter === 'posts'}
 						{#key after_id}
-							Feed(after_id={after_id} sort={sort} subpage='posts' time_range={time_range} type='user_posts' user_name={name})
-			{:else if tab === 'saved'}
-				ButtonGroup(options={tabs_array(tabs.saved.filters).map(x => ({ ...x, link: format_url({ feed_filter: x.value, subpage: 'saved', user_name: name }) }))} selected={filter})
-				{#if filter === 'posts'}
-					{#key after_id}
-						Feed(after_id={after_id} filter={filter} subpage='saved' type='account_saved_posts' user_name={name})
-				{:else if filter === 'comments'}
-					{#key after_id}
-						Feed(after_id={after_id} filter={filter} subpage='saved' type='account_saved_comments' user_name={name})
+							Feed(after_id={after_id} filter={filter} subpage='saved' type='account_saved_posts' user_name={name})
+					{:else if filter === 'comments'}
+						{#key after_id}
+							Feed(after_id={after_id} filter={filter} subpage='saved' type='account_saved_comments' user_name={name})
 
 style.
 	.user
@@ -117,7 +119,8 @@ style.
 		display grid
 		gap 32px
 		grid-template-columns 64px 1fr
-		margin-bottom 2em
+	.user-tab-options
+		margin-top 3em
 	.user-trophies
 		display flex
 		flex-flow row wrap
