post: remove gfycat and imgur embeds
Gfycat is shutting down on 2023-09-01.

Imgur has indicated they want to start deleting anonymous uploads and
NSFW content (the two most important use cases for Redditors). Unclear
if this is actually happening yet, but furthermore their embed code only
works half the time anyways, so it's a good chance to excise it.

--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -254,9 +254,7 @@ svelte:head
 							{#if html_embeds(post)}
 								{@const embed = html_embeds(post)}
 									{@html embed.html}
-									{#if embed.script === 'imgur'}
-										script(defer='true' src='https://s.imgur.com/min/embed.js')
-									{:else if embed.script === 'twitter'}
+									{#if embed.script === 'twitter'}
 										script(defer='true' src='https://platform.twitter.com/widgets.js')
 							{:else if iframe_embeds(post.url)}
 								{@const embed = iframe_embeds(post.url)}
