media player: use tabular numerals for duration display

--- a/src/ui/component/shared/MediaPlayer.pug
+++ b/src/ui/component/shared/MediaPlayer.pug
@@ -184,6 +184,7 @@ style.
 			width 100%
 	.media-player-controls
 		display flex
+		font-feature-settings 'calt', 'ss01', 'tnum'
 		gap 8px
 		margin-top 6px
 		:fullscreen &
